OpenJMLTest/test/linkedBug/expected
test/linkedBug/Linked.java:46: error: Failed to find a type for oldlinks.prepend(this.next) <any> <any> <>(Linked<W>)recovery
    //@   ensures this.links.equals(oldlinks.prepend(this.next));
                                                    ^
Operation not performed because of parse or type errors
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
